--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,6 @@
 env:
-  ANKA_IMAGE_NAME: macos-10.12-xcode-8.3.3
-  XCODE_DESTINATION: platform=iOS Simulator,name=iPhone 7,OS=10.3.1
+  ANKA_IMAGE_NAME: aug16sierra
+  XCODE_DESTINATION: platform=iOS Simulator,name=iPhone 7,OS=11.0
 
 steps:
   - label: "Build"
